salesforce-main/src/main/default/objects/Application_wizard_eduction__c/Application_wizard_eduction__c.object-meta.xml
<CustomObject>
    <description>this is where the application education data  all types</description>
    <label>Application wizard eduction</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>account wizard eduction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>application wizard eductions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>