salesforce-main/src/main/default/objects/Application_wizard_eduction__c/fields/Country_of_Study__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Study__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country of Study</label>
    <referenceTo>country_list__c</referenceTo>
    <relationshipLabel>application wizard eductions</relationshipLabel>
    <relationshipName>application_wizard_eductions</relationshipName>
    <type>Lookup</type>
</CustomField>