salesforce-main/src/main/default/objects/Application_wizard_eduction__c/fields/full_time__c.field-meta.xml
<CustomField>
    <fullName>full_time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>full time</label>
    <type>Checkbox</type>
</CustomField>