salesforce-main/src/main/default/objects/Application_wizard_eduction__c/fields/institution__c.field-meta.xml
<CustomField>
    <fullName>institution__c</fullName>
    <label>institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>