salesforce-main/src/main/default/objects/Application_wizard_eduction__c/fields/Institution_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Institution_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Institution Lookup</label>
    <referenceTo>Qualification_Institution__c</referenceTo>
    <relationshipLabel>application wizard eductions</relationshipLabel>
    <relationshipName>application_wizard_eductions</relationshipName>
    <type>Lookup</type>
</CustomField>