salesforce-main/src/main/default/objects/Application_wizard_eduction__c/fields/Mode_of_Study__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Study__c</fullName>
    <label>Mode of Study</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Part Time</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>