salesforce-main/src/main/default/objects/Application_wizard_eduction__c/fields/Other_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Other_Qualification__c</fullName>
    <label>Other Qualification</label>
    <type>TextArea</type>
</CustomField>