salesforce-main/src/main/default/objects/Application_wizard_eduction__c/fields/predicted_actual__c.field-meta.xml
<CustomField>
    <fullName>predicted_actual__c</fullName>
    <label>predicted-actual</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Predicted</fullName>
            </value>
            <value>
                <fullName>Actual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>