salesforce-main/src/main/default/objects/Application_wizard_eduction__c/fields/Qualification__c.field-meta.xml
<CustomField>
    <fullName>Qualification__c</fullName>
    <label>HS Qualification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A Level</fullName>
            </value>
            <value>
                <fullName>GCSE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>