salesforce-main/src/main/default/objects/Application_wizard_eduction__c/fields/Qualification_Date__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Date__c</fullName>
    <label>Qualification Date</label>
    <type>Date</type>
</CustomField>