salesforce-main/src/main/default/objects/Application_wizard_eduction__c/fields/title_of_award__c.field-meta.xml
<CustomField>
    <fullName>title_of_award__c</fullName>
    <label>title of award</label>
    <length>255</length>
    <type>Text</type>
</CustomField>