salesforce-main/src/main/default/objects/Application_wizard_eduction__c/fields/wizard__c.field-meta.xml
<CustomField>
    <fullName>wizard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application wizard</label>
    <referenceTo>Application_wizard__c</referenceTo>
    <relationshipName>account_wizard_eductions</relationshipName>
    <type>Lookup</type>
</CustomField>