salesforce-main/src/main/default/objects/Application_wizard_eduction__c/fields/year_of_completion__c.field-meta.xml
<CustomField>
    <fullName>year_of_completion__c</fullName>
    <label>year of completion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>